--- a/1.Practice/index.html
+++ b/1.Practice/index.html
@@ -6,10 +6,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>1st Bootstrap</title>
     <link rel="stylesheet" href="../npm-packages/node_modules/bootstrap/dist/css/bootstrap.css">
+    <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
-    <h1>Hello world</h1>    
+    <h1>Hello world</h1>
+
+    
     <script src="../npm-packages/node_modules/bootstrap/dist/js/bootstrap.bundle.js"></script>
 </body>
 
