--- a/1.Practice/index.html
+++ b/1.Practice/index.html
@@ -10,9 +10,18 @@
 </head>
 
 <body>
-    <h1>Hello world</h1>
+    <h1>CSS Grid System</h1>
+    <div class="container border border-2 border-black">
+        <div class="row">
+            <div class="col-lg-2 border border-2 border-danger">Column-1</div>
+            <div class="col-lg-2 border border-2 border-danger">Column-2</div>
+        </div>
 
-    
+        <div class="row">
+            <div class="col-md-1  border border-2 border-danger">Column-1</div>
+            <div class="col-md-3 border border-2 border-danger">Column-2</div>
+        </div>
+    </div>
     <script src="../npm-packages/node_modules/bootstrap/dist/js/bootstrap.bundle.js"></script>
 </body>
 
