testing grid system

--- a/1.Practice/index.html
+++ b/1.Practice/index.html
@@ -11,7 +11,7 @@
 
 <body>
     <h1>CSS Grid System</h1>
-    <div class="container border border-2 border-black">
+    <div class="container text-center border-2 border-black">
         <div class="row">
             <div class="col-lg-2 border border-2 border-danger">Column-1</div>
             <div class="col-lg-2 border border-2 border-danger">Column-2</div>
