--- a/1.Practice/index.html
+++ b/1.Practice/index.html
@@ -11,17 +11,26 @@
 
 <body>
     <h1>CSS Grid System</h1>
-    <div class="container text-center border-2 border-black">
-        <div class="row">
-            <div class="col-lg-2 border border-2 border-danger">Column-1</div>
-            <div class="col-lg-2 border border-2 border-danger">Column-2</div>
+        <div class="container border border-2 border-black">
+            <div class="row">
+                <div class="col-xs-12 col-sm-6 col-md-4 col-lg-3 col-xl-2 col-xxl-1 border border-2 border-danger">Col-1</div>
+                <div class="col-xs-12 col-sm-6 col-md-4 col-lg-3 col-xl-2 col-xxl-1 border border-2 border-danger">Col-2</div>
+                <div class="col-xs-12 col-sm-6 col-md-4 col-lg-3 col-xl-2 col-xxl-1 border border-2 border-danger">Col-3</div>
+                <div class="col-xs-12 col-sm-6 col-md-4 col-lg-3 col-xl-2 col-xxl-1 border border-2 border-danger">Col-4</div>
+                <div class="col-xs-12 col-sm-6 col-md-4 col-lg-3 col-xl-2 col-xxl-1 border border-2 border-danger">Col-5</div>
+                <div class="col-xs-12 col-sm-6 col-md-4 col-lg-3 col-xl-2 col-xxl-1 border border-2 border-danger">Col-6</div>
+                <div class="col-xs-12 col-sm-6 col-md-4 col-lg-3 col-xl-2 col-xxl-1 border border-2 border-danger">Col-7</div>
+                <div class="col-xs-12 col-sm-6 col-md-4 col-lg-3 col-xl-2 col-xxl-1 border border-2 border-danger">Col-8</div>
+                <div class="col-xs-12 col-sm-6 col-md-4 col-lg-3 col-xl-2 col-xxl-1 border border-2 border-danger ">Col-9</div>
+                <div class="col-xs-12 col-sm-6 col-md-4 col-lg-3 col-xl-2 col-xxl-1 border border-2 border-danger">Col-10</div>
+                <div class="col-xs-12 col-sm-6 col-md-4 col-lg-3 col-xl-2 col-xxl-1 border border-2 border-danger">Col-11</div>
+                <div class="col-xs-12 col-sm-6 col-md-4 col-lg-3 col-xl-2 col-xxl-1 border border-2 border-danger">Col-12</div>
+            </div>
+            <div class="row">
+                
+            </div>
         </div>
-
-        <div class="row">
-            <div class="col-md-1  border border-2 border-danger">Column-1</div>
-            <div class="col-md-3 border border-2 border-danger">Column-2</div>
-        </div>
-    </div>
+        col-xs-12 col-sm-6 col-md-4 col-lg-3 col-xl-2 col-xxl-1
     <script src="../npm-packages/node_modules/bootstrap/dist/js/bootstrap.bundle.js"></script>
 </body>
 
