--- a/1.Practice/index.html
+++ b/1.Practice/index.html
@@ -26,6 +26,18 @@
                 <div class="col-xs-12 col-sm-6 col-md-4 col-lg-3 col-xl-2 col-xxl-1 border border-2 border-danger">Col-11</div>
                 <div class="col-xs-12 col-sm-6 col-md-4 col-lg-3 col-xl-2 col-xxl-1 border border-2 border-danger">Col-12</div>
             </div>
+            <div class="row row-cols-2 row-cols-lg-3 row-cols-sm-1">
+                <div class="col-md">COL1</div>
+                <div class="col">COL2</div>
+                <div class="col">COL3</div>
+                <div class="col">COL4</div>
+            </div>
+        </div>
+
+        <div class="container">
+            <div class="row">
+                
+            </div>
         </div>
         col-xs-12 col-sm-6 col-md-4 col-lg-3 col-xl-2 col-xxl-1
     <script src="../npm-packages/node_modules/bootstrap/dist/js/bootstrap.bundle.js"></script>
