--- a/1.Practice/index.html
+++ b/1.Practice/index.html
@@ -35,8 +35,17 @@
         </div>
 
         <div class="container">
-            <div class="row">
-                
+            <div class="row ">
+                <div class="border border-danger col-md-12">COL-1</div>
+                <div class="border border-danger col">
+                    <div class="row">
+                        <div class="border border-black col-sm-12 col-md-6">DIV-2</div>
+                        <div class="border border-black col-sm-12 col-md-6">DIV-3</div>
+                    </div>  <div class="row">
+                        <div class="border border-black col-sm-12 col-md-6">DIV-4</div>
+                        <div class="border border-black col-sm-12 col-md-6">DIV-5</div>
+                    </div>
+                </div>
             </div>
         </div>
         col-xs-12 col-sm-6 col-md-4 col-lg-3 col-xl-2 col-xxl-1
