testing grid system

--- a/1.Practice/index.html
+++ b/1.Practice/index.html
@@ -38,12 +38,29 @@
             <div class="row ">
                 <div class="border border-danger col-md-12">COL-1</div>
                 <div class="border border-danger col">
-                    <div class="row">
-                        <div class="border border-black col-sm-12 col-md-6">DIV-2</div>
-                        <div class="border border-black col-sm-12 col-md-6">DIV-3</div>
-                    </div>  <div class="row">
-                        <div class="border border-black col-sm-12 col-md-6">DIV-4</div>
-                        <div class="border border-black col-sm-12 col-md-6">DIV-5</div>
+                    <div class="row row-cols-4">
+                        <div class="border border-black col-sm-12 col-md-6 col-lg-3">DIV-2</div>
+                        <div class="border border-black col-sm-12 col-md-6 col-lg-3">DIV-3</div>
+                    </div>  <div class="row row-cols-4">
+                        <div class="border border-black col-sm-12 col-md-6 col-lg-auto">DIV-4</div>
+                        <div class="border border-black col-sm-12 col-md-6 col-lg-auto">DIV-5</div>
+                        <div class="border border-black col-sm-12 col-md-6 col-lg-auto">DIV-5</div>
+                        <div class="border border-black col-sm-12 col-md-6 col-lg-auto">DIV-5</div>
+                        <div class="border border-black col-sm-12 col-md-6 col-lg-auto">DIV-5</div>
+                        <div class="border border-black col-sm-12 col-md-6 col-lg-auto">DIV-5</div>
+                        <div class="border border-black col-sm-12 col-md-6 col-lg-auto">DIV-5</div>
+                        <div class="border border-black col-sm-12 col-md-6 col-lg-auto">DIV-5</div>
+                        <div class="border border-black col-sm-12 col-md-6 col-lg-auto">DIV-5</div>
+                        <div class="border border-black col-sm-12 col-md-6 col-lg-auto">DIV-5</div>
+                        <div class="border border-black col-sm-12 col-md-6 col-lg-auto">DIV-5</div>
+                        <div class="border border-black col-sm-12 col-md-6 col-lg-auto">DIV-5</div>
+                        <div class="border border-black col-sm-12 col-md-6 col-lg-auto">DIV-5</div>
+                        <div class="border border-black col-sm-12 col-md-6 col-lg-auto">DIV-5</div>
+                        <div class="border border-black col-sm-12 col-md-6 col-lg-auto">DIV-5</div>
+                        <div class="border border-black col-sm-12 col-md-6 col-lg-auto">DIV-5</div>
+                        <div class="border border-black col-sm-12 col-md-6 col-lg-auto">DIV-5</div>
+                        <div class="border border-black col-sm-12 col-md-6 col-lg-auto">DIV-5</div>
+                        <div class="border border-black col-sm-12 col-md-6 col-lg-auto">DIV-5</div>
                     </div>
                 </div>
             </div>
