--- a/2.Practice/index.html
+++ b/2.Practice/index.html
@@ -13,9 +13,11 @@
 </head>
 <body>
     <div class="container text-center">
-        <div class="row align-items-center" style="height: 200px;">
-            <div class="col-md-4 d-flex justify-content-center  align-items-center" style="height: 50px;"><p>test</p></div>
+        <div class="row ">
+            <div class="col-md-4">Col-1</div>
             <div class="col-md-8">Col-2</div>
+            <div class="col-md-8">Col-3</div>
+            <div class="col-md-4">Col-4</div>
         </div>
     </div>
     <script src="../npm-packages/node_modules/bootstrap/dist/js/bootstrap.bundle.js"></script>
