--- a/2.Practice/index.html
+++ b/2.Practice/index.html
@@ -15,9 +15,9 @@
     <div class="container text-center">
         <div class="row ">
             <div class="col-md-4">Col-1</div>
-            <div class="col-md-8">Col-2</div>
-            <div class="col-md-8">Col-3</div>
-            <div class="col-md-4">Col-4</div>
+            <div class="col-md-2">Col-2</div>
+            <div class="col-md-2">Col-3</div>
+            <div class="col-md-2 offset-md-2">Col-4</div>
         </div>
     </div>
     <script src="../npm-packages/node_modules/bootstrap/dist/js/bootstrap.bundle.js"></script>
