--- a/3.Practice/index.html
+++ b/3.Practice/index.html
@@ -1,14 +1,37 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Practice - 3</title>
     <link rel="stylesheet" href="../npm-packages/node_modules/bootstrap/dist/css/bootstrap.css">
+    <style>
+        .child {
+            border: 2px solid black;
+        }
+    </style>
 </head>
+
 <body>
-    <div class="container">
-        
+    <div class="container-fluid">
+        <div class="row gy-1">
+
+            <div class="col ">
+                <div class="child p-2">Pramod</div>
+            </div>
+            <div class="col ">
+                <div class="child p-2">Pramod</div>
+            </div>
+            <div class="col ">
+                <div class="child p-2">Pramod</div>
+            </div>
+            <div class="col ">
+                <div class="child p-2">Pramod</div>
+            </div>
+        </div>
+    </div>
     </div>
 </body>
+
 </html>
