testing card with grid

--- a/4.Practice/index.html
+++ b/4.Practice/index.html
@@ -69,6 +69,12 @@
                 </span>
             </div>
         </div>        
-    </div>    
+    </div>
+    
+    <div class="card">
+        <div class="card-body">
+          This is some text within a card body.
+        </div>
+      </div>
 </body>
 </html>
