testing card with grid

--- a/4.Practice/index.html
+++ b/4.Practice/index.html
@@ -1,80 +1,93 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Container testing</title>
     <link rel="stylesheet" href="../npm-packages/node_modules/bootstrap/dist/css/bootstrap.css">
     <style>
-        *{
+        * {
             margin: 0;
             padding: 0;
         }
     </style>
 </head>
+
 <body>
     <div class="container-fluid" style="padding:0">
         <div class="row">
-            <div class="col-md-auto">
-                <span class="card m-3" style="width: 15em;" >
-                    <img src="https://bairesdev.mo.cloudinary.net/blog/2020/10/Top-100-programming-languages.jpg?tx=w_3840,q_auto" class="card-img-top" alt="...">
+            <div class="col-sm-auto">
+                <span class="card m-3" style="width: 15em;">
+                    <img src="https://bairesdev.mo.cloudinary.net/blog/2020/10/Top-100-programming-languages.jpg?tx=w_3840,q_auto"
+                        class="card-img-top" alt="...">
                     <div class="card-body">
-                      <h5 class="card-title">Card title</h5>
-                      <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                      <a href="https://www.google.com" class="btn btn-primary btn-sm" target="_blank">Go somewhere</a>
-                    </div>
-                </span>
-            </div>
-            
-            <div class="col-md-auto">
-                <span class="card m-3" style="width: 15rem;" >
-                    <img src="https://bairesdev.mo.cloudinary.net/blog/2020/10/Top-100-programming-languages.jpg?tx=w_3840,q_auto" class="card-img-top" alt="...">
-                    <div class="card-body">
-                      <h5 class="card-title">Card title</h5>
-                      <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                      <a href="https://www.google.com" class="btn btn-primary btn-sm" target="_blank">Go somewhere</a>
+                        <h5 class="card-title">Card title</h5>
+                        <p class="card-text">Some quick example text to build on the card title and make up the bulk of
+                            the card's content.</p>
+                        <a href="https://www.google.com" class="btn btn-primary btn-sm" target="_blank">Go somewhere</a>
                     </div>
                 </span>
             </div>
 
-            <div class="col-md-auto">
-                <span class="card m-3" style="width: 15rem;" >
-                    <img src="https://bairesdev.mo.cloudinary.net/blog/2020/10/Top-100-programming-languages.jpg?tx=w_3840,q_auto" class="card-img-top" alt="...">
+            <div class="col-sm-auto">
+                <span class="card m-3" style="width: 15rem;">
+                    <img src="https://bairesdev.mo.cloudinary.net/blog/2020/10/Top-100-programming-languages.jpg?tx=w_3840,q_auto"
+                        class="card-img-top" alt="...">
                     <div class="card-body">
-                      <h5 class="card-title">Card title</h5>
-                      <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                      <a href="https://www.google.com" class="btn btn-primary btn-sm" target="_blank">Go somewhere</a>
+                        <h5 class="card-title">Card title</h5>
+                        <p class="card-text">Some quick example text to build on the card title and make up the bulk of
+                            the card's content.</p>
+                        <a href="https://www.google.com" class="btn btn-primary btn-sm" target="_blank">Go somewhere</a>
                     </div>
                 </span>
             </div>
 
-            <div class="col-md-auto">
-                <span class="card m-3" style="width: 15rem;" >
-                    <img src="https://bairesdev.mo.cloudinary.net/blog/2020/10/Top-100-programming-languages.jpg?tx=w_3840,q_auto" class="card-img-top" alt="...">
+            <div class="col-sm-auto">
+                <span class="card m-3" style="width: 15rem;">
+                    <img src="https://bairesdev.mo.cloudinary.net/blog/2020/10/Top-100-programming-languages.jpg?tx=w_3840,q_auto"
+                        class="card-img-top" alt="...">
                     <div class="card-body">
-                      <h5 class="card-title">Card title</h5>
-                      <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                      <a href="https://www.google.com" class="btn btn-primary btn-sm" target="_blank">Go somewhere</a>
+                        <h5 class="card-title">Card title</h5>
+                        <p class="card-text">Some quick example text to build on the card title and make up the bulk of
+                            the card's content.</p>
+                        <a href="https://www.google.com" class="btn btn-primary btn-sm" target="_blank">Go somewhere</a>
                     </div>
                 </span>
             </div>
-            <div class="col-md-auto">
-                <span class="card m-3" style="width: 15rem;" >
-                    <img src="https://bairesdev.mo.cloudinary.net/blog/2020/10/Top-100-programming-languages.jpg?tx=w_3840,q_auto" class="card-img-top" alt="...">
+
+            <div class="col-sm-auto">
+                <span class="card m-3" style="width: 15rem;">
+                    <img src="https://bairesdev.mo.cloudinary.net/blog/2020/10/Top-100-programming-languages.jpg?tx=w_3840,q_auto"
+                        class="card-img-top" alt="...">
                     <div class="card-body">
-                      <h5 class="card-title">Card title</h5>
-                      <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                      <a href="https://www.google.com" class="btn btn-primary btn-sm" target="_blank">Go somewhere</a>
+                        <h5 class="card-title">Card title</h5>
+                        <p class="card-text">Some quick example text to build on the card title and make up the bulk of
+                            the card's content.</p>
+                        <a href="https://www.google.com" class="btn btn-primary btn-sm" target="_blank">Go somewhere</a>
                     </div>
                 </span>
             </div>
-        </div>        
+            <div class="col-sm-auto">
+                <span class="card m-3" style="width: 15rem;">
+                    <img src="https://bairesdev.mo.cloudinary.net/blog/2020/10/Top-100-programming-languages.jpg?tx=w_3840,q_auto"
+                        class="card-img-top" alt="...">
+                    <div class="card-body">
+                        <h5 class="card-title">Card title</h5>
+                        <p class="card-text">Some quick example text to build on the card title and make up the bulk of
+                            the card's content.</p>
+                        <a href="https://www.google.com" class="btn btn-primary btn-sm" target="_blank">Go somewhere</a>
+                    </div>
+                </span>
+            </div>
+        </div>
     </div>
-    
+
     <div class="card">
         <div class="card-body">
-          This is some text within a card body.
+            This is some text within a card body.
         </div>
-      </div>
+    </div>
 </body>
+
 </html>
