--- a/4.Practice/index.html
+++ b/4.Practice/index.html
@@ -167,11 +167,13 @@
     <div class="card text-bg-dark w-50">
         <img src="https://rb.gy/my9eb" class="card-img" alt="...">
         <div class="card-img-overlay">
-          <h2 class="card-title">Card title</h2>
-          <p class="card-text fw-lighter">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
-          <p class="card-text"><small>Last updated 3 mins ago</small></p>
+            <h2 class="card-title">Card title</h2>
+            <p class="card-text fw-lighter">This is a wider card with supporting text below as a natural lead-in to
+                additional content. This content is a little bit longer.</p>
+            <p class="card-text"><small>Last updated 3 mins ago</small></p>
         </div>
-      </div>
+    </div>
+    
 </body>
 
 </html>
