--- a/4.Practice/index.html
+++ b/4.Practice/index.html
@@ -174,7 +174,7 @@
         </div>
     </div>
 
-    <div class="row">
+    <div class="row row-cols-md-2 g-3">
         <div class="col">
             <div class="card">
                 <img src="https://rb.gy/my9eb" class="card-img-top" alt="...">
