--- a/4.Practice/index.html
+++ b/4.Practice/index.html
@@ -11,6 +11,46 @@
             margin: 0;
             padding: 0;
         }
+
+        .typewriter h1 {
+            overflow: hidden;
+            /* Ensures the content is not revealed until the animation */
+            border-right: .15em solid orange;
+            /* The typwriter cursor */
+            white-space: nowrap;
+            /* Keeps the content on a single line */
+            margin: 0 auto;
+            /* Gives that scrolling effect as the typing happens */
+            letter-spacing: .15em;
+            /* Adjust as needed */
+            animation:
+                typing 3.5s steps(40, end),
+                blink-caret .75s step-end infinite;
+        }
+
+        /* The typing effect */
+        @keyframes typing {
+            from {
+                width: 0
+            }
+
+            to {
+                width: 100%
+            }
+        }
+
+        /* The typewriter cursor effect */
+        @keyframes blink-caret {
+
+            from,
+            to {
+                border-color: transparent
+            }
+
+            50% {
+                border-color: orange;
+            }
+        }
     </style>
 </head>
 
@@ -215,6 +255,26 @@
                 </div>
             </div>
         </div>
+    </div>
+
+    <div class="m-5">
+        <h1>h1. Bootstrap heading</h1>
+        <h2>h2. Bootstrap heading</h2>
+        <h3>h3. Bootstrap heading</h3>
+        <h4>h4. Bootstrap heading</h4>
+        <h5>h5. Bootstrap heading</h5>
+        <h6>h6. Bootstrap heading</h6>
+        <h6>h6. Bootstrap heading</h6>
+    </div>
+
+    <div class="m-4 typewriter">
+        <h3>
+            Fancy display heading
+            <small class="text-body-secondary">With faded secondary text</small>
+        </h3>
+        <h1>
+            This is a lead paragraph. It stands out from regular paragraphs.
+        </h1>
     </div>
 </body>
 
