--- a/4.Practice/index.html
+++ b/4.Practice/index.html
@@ -268,14 +268,45 @@
     </div>
 
     <div class="m-4 typewriter">
-        <h3>
+        <h1>
             Fancy display heading
             <small class="text-body-secondary">With faded secondary text</small>
-        </h3>
+        </h1>
         <h1>
             This is a lead paragraph. It stands out from regular paragraphs.
         </h1>
     </div>
+
+    <div>
+        <p>You can use the mark tag to <mark>highlight</mark> text.</p>
+        <p><del>This line of text is meant to be treated as deleted text.</del></p>
+        <p><s>This line of text is meant to be treated as no longer accurate.</s></p>
+        <p><ins>This line of text is meant to be treated as an addition to the document.</ins></p>
+        <p><u>This line of text will render as underlined.</u></p>
+        <p><small>This line of text is meant to be treated as fine print.</small></p>
+        <p><strong>This line rendered as bold text.</strong></p>
+        <p><em>This line rendered as italicized text.</em></p>
+    </div>
+
+    <p><abbr title="attribute">attr</abbr></p>
+    <p><abbr title="HyperText Markup Language" class="initialism">HTML</abbr></p>
+    <blockquote class="blockquote">
+        <p>A well-known quote, contained in a blockquote element.</p>
+    </blockquote>
+
+    <figure>
+        <blockquote class="blockquote">
+            <p>A well-known quote, contained in a blockquote element.</p>
+        </blockquote>
+        <figcaption class="blockquote-footer">
+            Someone famous in <cite title="Source Title">Source Title</cite>
+        </figcaption>
+    </figure>
+
+    <picture>
+        <source srcset="https://picsum.photos/200/300" type="image/svg+xml">
+        <img src="" class="img-fluid img-thumbnail" alt="https://picsum.photos/200/300">
+      </picture>
 </body>
 
 </html>
