--- a/4.Practice/index.html
+++ b/4.Practice/index.html
@@ -306,7 +306,9 @@
     <picture>
         <source srcset="https://picsum.photos/200/300" type="image/svg+xml">
         <img src="" class="img-fluid img-thumbnail" alt="https://picsum.photos/200/300">
-      </picture>
+        <source srcset="https://picsum.photos/200/300" type="image/svg+xml">
+        <img src="" class="img-fluid img-thumbnail" alt="https://picsum.photos/400/500">
+    </picture>
 </body>
 
 </html>
