--- a/5.Practice/index.html
+++ b/5.Practice/index.html
@@ -10,7 +10,7 @@
 
 <body>
     <div class="container mt-5">
-        <div class="border border-dark border-2 text-center">
+        <div class="border border-dark border-2 w-50 mx-auto">
             <p class="p-5">Lorem ipsum dolor sit amet consectetur adipisicing elit. Esse natus deserunt, facere sint maxime ex quia,
                 nobis nam sapiente deleniti ad harum, delectus iusto tempora odit? Corporis culpa veritatis rem.
                 Magni reprehenderit velit accusamus facilis fugit pariatur repellendus tempora autem dolores rerum sunt
@@ -25,7 +25,7 @@
                 Enim perspiciatis voluptatum earum quas illum! Ea et tempora excepturi, itaque corporis vel nihil nam
                 sed veniam error obcaecati alias consequatur beatae. Vero eum, minus neque veritatis pariatur vitae
                 deleniti.</p>
-            <p class="d-inline-block bg-dark text-white " style="width: 150px;">Contact Us</p>
+            <div class="text-center m-4 bg-dark text-white w-50 mx-auto">Contact Us</div>
         </div>
     </div>
 </body>
