--- a/5.Practice/index.html
+++ b/5.Practice/index.html
@@ -25,7 +25,7 @@
                 Enim perspiciatis voluptatum earum quas illum! Ea et tempora excepturi, itaque corporis vel nihil nam
                 sed veniam error obcaecati alias consequatur beatae. Vero eum, minus neque veritatis pariatur vitae
                 deleniti.</p>
-            <div class="text-center m-4 bg-dark text-white w-50 mx-auto">Contact Us</div>
+            <div class="text-center m-4 bg-dark text-white w-50 mx-auto d-none d-sm-block ">Contact Us</div>
         </div>
     </div>
 </body>
