--- a/6.Practice/index.html
+++ b/6.Practice/index.html
@@ -4,12 +4,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Bootstrap Utilities</title>
+    <title>Bootstrap Flex</title>
     <link rel="stylesheet" href="../npm-packages/node_modules/bootstrap/dist/css/bootstrap.css">
 </head>
 
 <body>
-
+D:\PERSONAL\My Data\Official\SJES COLLEGE\BCA\SEMESTER\4TH SEM\Python
 </body>
 
 </html>
