--- a/6.Practice/index.html
+++ b/6.Practice/index.html
@@ -16,7 +16,10 @@
               <tr>
                 <th scope="col">#</th>
                 <th scope="col">First</th>
+                <th scope="col">First</th>
                 <th scope="col">Last</th>
+                <th scope="col">Last</th>
+                <th scope="col">Handle</th>
                 <th scope="col">Handle</th>
               </tr>
             </thead>
@@ -24,18 +27,26 @@
               <tr>
                 <th scope="row">1</th>
                 <td>Mark</td>
+                <td>Mark</td>
+                <td>Mark</td>
                 <td>Otto</td>
+                <td>@mdo</td>
                 <td>@mdo</td>
               </tr>
               <tr>
                 <th scope="row">2</th>
                 <td>Jacob</td>
+                <td>Jacob</td>
                 <td>Thornton</td>
+                <td>Thornton</td>
+                <td>@fat</td>
                 <td>@fat</td>
               </tr>
               <tr>
                 <th scope="row">3</th>
                 <td colspan="2">Larry the Bird</td>
+                <td colspan="2">Larry the Bird</td>
+                <td>@twitter</td>
                 <td>@twitter</td>
               </tr>
             </tbody>
