--- a/6.Practice/index.html
+++ b/6.Practice/index.html
@@ -10,7 +10,7 @@
 
 <body>
 
-    <div class="container">
+    <div class="container-sm">
         <div class="table-responsive-md">
             <table class="table">
                 <thead>
