--- a/6.Practice/index.html
+++ b/6.Practice/index.html
@@ -14,7 +14,7 @@
         <div class="table-responsive-md">
             <table class="table">
                 <thead>
-                    <tr>
+                    <tr class="table-success border-2 border-white">
                         <th scope="col">#</th>
                         <th scope="col">First</th>
                         <th scope="col">First</th>
@@ -25,7 +25,7 @@
                     </tr>
                 </thead>
                 <tbody>
-                    <tr>
+                    <tr class="table-dark border-2 border-white">
                         <th scope="row">1</th>
                         <td>Mark</td>
                         <td>Mark</td>
@@ -34,7 +34,7 @@
                         <td>@mdo</td>
                         <td>@mdo</td>
                     </tr>
-                    <tr>
+                    <tr class="table-dark border-2 border-white">
                         <th scope="row">2</th>
                         <td>Jacob</td>
                         <td>Jacob</td>
@@ -43,7 +43,7 @@
                         <td>@fat</td>
                         <td>@fat</td>
                     </tr>
-                    <tr>
+                    <tr class="table-dark border-2 border-white">
                         <th scope="row">3</th>
                         <td colspan="2">Larry the Bird</td>
                         <td colspan="2">Larry the Bird</td>
