--- a/6.Practice/index.html
+++ b/6.Practice/index.html
@@ -12,9 +12,9 @@
 
     <div class="container-sm">
         <div class="table-responsive-md">
-            <table class="table">
+            <table class="table table-striped table-hover">
                 <thead>
-                    <tr class="table-success border-2 border-white">
+                    <tr class="table-success border-2 border-white ">
                         <th scope="col">#</th>
                         <th scope="col">First</th>
                         <th scope="col">First</th>
@@ -25,7 +25,7 @@
                     </tr>
                 </thead>
                 <tbody>
-                    <tr class="table-dark border-2 border-white">
+                    <tr class="table-dark border-2 border-white ">
                         <th scope="row">1</th>
                         <td>Mark</td>
                         <td>Mark</td>
