--- a/6.Practice/index.html
+++ b/6.Practice/index.html
@@ -6,6 +6,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Bootstrap Flex</title>
     <link rel="stylesheet" href="../npm-packages/node_modules/bootstrap/dist/css/bootstrap.css">
+    <style>
+        #first:hover{
+            background-color: rgba(0, 0, 0, 0.766);
+            color: white;
+            cursor: pointer;
+        }
+    </style>
 </head>
 
 <body>
@@ -25,7 +32,7 @@
                     </tr>
                 </thead>
                 <tbody>
-                    <tr class="table-dark border-2 border-white ">
+                    <tr class="table-dark border-2 border-white table-ac">
                         <th scope="row">1</th>
                         <td>Mark</td>
                         <td>Mark</td>
@@ -53,6 +60,30 @@
                 </tbody>
             </table>
         </div>
+        <div class="alert alert-primary mt-5" id="first" role="alert">
+            A simple primary alert—check it out!
+          </div>
+          <div class="alert alert-secondary" id="first" role="alert">
+            A simple secondary alert—check it out!
+          </div>
+          <div class="alert alert-success" id="first" role="alert">
+            A simple success alert—check it out!
+          </div>
+          <div class="alert alert-danger" id="first" role="alert">
+            A simple danger alert—check it out!
+          </div>
+          <div class="alert alert-warning" id="first" role="alert">
+            A simple warning alert—check it out!
+          </div>
+          <div class="alert alert-info" id="first" role="alert">
+            A simple info alert—check it out!
+          </div>
+          <div class="alert alert-light" id="first" role="alert">
+            A simple light alert—check it out!
+          </div>
+          <div class="alert alert-dark" id="first" role="alert">
+            A simple dark alert—check it out!
+          </div>
     </div>
 </body>
 
