--- a/6.Practice/index.html
+++ b/6.Practice/index.html
@@ -7,7 +7,7 @@
     <title>Bootstrap Flex</title>
     <link rel="stylesheet" href="../npm-packages/node_modules/bootstrap/dist/css/bootstrap.css">
     <style>
-        #first:hover{
+        #first:hover {
             background-color: rgba(0, 0, 0, 0.766);
             color: white;
             cursor: pointer;
@@ -60,30 +60,37 @@
                 </tbody>
             </table>
         </div>
-        <div class="alert alert-primary mt-5" id="first" role="alert">
-            A simple primary alert—check it out!
-          </div>
-          <div class="alert alert-secondary" id="first" role="alert">
-            A simple secondary alert—check it out!
-          </div>
-          <div class="alert alert-success" id="first" role="alert">
-            A simple success alert—check it out!
-          </div>
-          <div class="alert alert-danger" id="first" role="alert">
-            A simple danger alert—check it out!
-          </div>
-          <div class="alert alert-warning" id="first" role="alert">
-            A simple warning alert—check it out!
-          </div>
-          <div class="alert alert-info" id="first" role="alert">
-            A simple info alert—check it out!
-          </div>
-          <div class="alert alert-light" id="first" role="alert">
-            A simple light alert—check it out!
-          </div>
-          <div class="alert alert-dark" id="first" role="alert">
-            A simple dark alert—check it out!
-          </div>
+
+        <div class="alert-wrapper-text">
+            <div class="alert alert-primary mt-5" id="first" role="alert">
+                A simple primary alert—check it out!
+            </div>
+            <div class="alert alert-secondary" id="first" role="alert">
+                A simple secondary alert—check it out!
+            </div>
+            <div class="alert alert-success" id="first" role="alert">
+                A simple success alert—check it out!
+            </div>
+            <div class="alert alert-danger" id="first" role="alert">
+                A simple danger alert—check it out!
+            </div>
+            <div class="alert alert-warning" id="first" role="alert">
+                A simple warning alert—check it out!
+            </div>
+            <div class="alert alert-info" id="first" role="alert">
+                A simple info alert—check it out!
+            </div>
+            <div class="alert alert-light" id="first" role="alert">
+                A simple light alert—check it out!
+            </div>
+            <div class="alert alert-dark" id="first" role="alert">
+                A simple dark alert—check it out!
+            </div>
+        </div>
+
+        <div class="alert-wrapper-button">
+            
+        </div>
     </div>
 </body>
 
