--- a/6.Practice/index.html
+++ b/6.Practice/index.html
@@ -89,7 +89,8 @@
         </div>
 
         <div class="alert-wrapper-button">
-            
+            <div id="liveAlertPlaceholder"></div>
+            <button type="button" class="btn btn-primary" id="liveAlertBtn">Show live alert</button>
         </div>
     </div>
 </body>
