--- a/6.Practice/index.html
+++ b/6.Practice/index.html
@@ -96,7 +96,7 @@
 
     <div class="container link-highlight">
         <div class="alert alert-primary" role="alert">
-            A simple primary alert with <a href="https://www.google.com" class="alert-link">an example link</a>. Give it a click if you like.
+            A simple primary alert with <a href="https://www.google.com" class="alert-link" target="_blank">an example link</a>. Give it a click if you like.
           </div>
           <div class="alert alert-secondary" role="alert">
             A simple secondary alert with <a href="#" class="alert-link">an example link</a>. Give it a click if you like.
