--- a/6.Practice/index.html
+++ b/6.Practice/index.html
@@ -12,6 +12,14 @@
             color: white;
             cursor: pointer;
         }
+
+        #welldone:hover{
+            cursor: pointer;
+            color: black;
+            background-color: darkgray;
+            text-align: center;
+            transition: all 2s ease-out ;
+        }
     </style>
 </head>
 
@@ -120,6 +128,13 @@
             A simple dark alert with <a href="#" class="alert-link">an example link</a>. Give it a click if you like.
           </div>
     </div>
+
+    <div class="container alert alert-success" role="alert" id="welldone">
+        <h4 class="alert-heading" id="done">Well done!</h4>
+        <p>Aww yeah, you successfully read this important alert message. This example text is going to run a bit longer so that you can see how spacing within an alert works with this kind of content.</p>
+        <hr>
+        <p class="mb-0">Whenever you need to, be sure to use margin utilities to keep things nice and tidy.</p>
+      </div>
 </body>
 
 </html>
