--- a/6.Practice/index.html
+++ b/6.Practice/index.html
@@ -13,12 +13,20 @@
             cursor: pointer;
         }
 
-        #welldone:hover{
+        #welldone:hover {
             cursor: pointer;
             color: black;
             background-color: darkgray;
             text-align: center;
-            transition: all 2s ease-out ;
+            transition: all 2s ease-out;
+        }
+
+        @keyframes icon2 {
+            from{color: darkblue;}
+            to{color: red;}
+        }
+        #alert-icon:hover {
+            animation: icon2 200ms ease-in-out infinite alternate-reverse;
         }
     </style>
 </head>
@@ -104,37 +112,52 @@
 
     <div class="container link-highlight">
         <div class="alert alert-primary" role="alert">
-            A simple primary alert with <a href="https://www.google.com" class="alert-link" target="_blank">an example link</a>. Give it a click if you like.
-          </div>
-          <div class="alert alert-secondary" role="alert">
-            A simple secondary alert with <a href="#" class="alert-link">an example link</a>. Give it a click if you like.
-          </div>
-          <div class="alert alert-success" role="alert">
+            A simple primary alert with <a href="https://www.google.com" class="alert-link" target="_blank">an example
+                link</a>. Give it a click if you like.
+        </div>
+        <div class="alert alert-secondary" role="alert">
+            A simple secondary alert with <a href="#" class="alert-link">an example link</a>. Give it a click if you
+            like.
+        </div>
+        <div class="alert alert-success" role="alert">
             A simple success alert with <a href="#" class="alert-link">an example link</a>. Give it a click if you like.
-          </div>
-          <div class="alert alert-danger" role="alert">
+        </div>
+        <div class="alert alert-danger" role="alert">
             A simple danger alert with <a href="#" class="alert-link">an example link</a>. Give it a click if you like.
-          </div>
-          <div class="alert alert-warning" role="alert">
+        </div>
+        <div class="alert alert-warning" role="alert">
             A simple warning alert with <a href="#" class="alert-link">an example link</a>. Give it a click if you like.
-          </div>
-          <div class="alert alert-info" role="alert">
+        </div>
+        <div class="alert alert-info" role="alert">
             A simple info alert with <a href="#" class="alert-link">an example link</a>. Give it a click if you like.
-          </div>
-          <div class="alert alert-light" role="alert">
+        </div>
+        <div class="alert alert-light" role="alert">
             A simple light alert with <a href="#" class="alert-link">an example link</a>. Give it a click if you like.
-          </div>
-          <div class="alert alert-dark" role="alert">
+        </div>
+        <div class="alert alert-dark" role="alert">
             A simple dark alert with <a href="#" class="alert-link">an example link</a>. Give it a click if you like.
-          </div>
+        </div>
     </div>
 
     <div class="container alert alert-success" role="alert" id="welldone">
         <h4 class="alert-heading" id="done">Well done!</h4>
-        <p>Aww yeah, you successfully read this important alert message. This example text is going to run a bit longer so that you can see how spacing within an alert works with this kind of content.</p>
+        <p>Aww yeah, you successfully read this important alert message. This example text is going to run a bit longer
+            so that you can see how spacing within an alert works with this kind of content.</p>
         <hr>
         <p class="mb-0">Whenever you need to, be sure to use margin utilities to keep things nice and tidy.</p>
-      </div>
+    </div>
+
+    <div class="container alert alert-primary d-flex align-items-center aler" role="alert">
+        <svg id="alert-icon" xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="currentColor"
+            class="bi bi-exclamation-triangle-fill flex-shrink-0 me-2" viewBox="0 0 16 16" role="img"
+            aria-label="Warning:">
+            <path
+                d="M8.982 1.566a1.13 1.13 0 0 0-1.96 0L.165 13.233c-.457.778.091 1.767.98 1.767h13.713c.889 0 1.438-.99.98-1.767L8.982 1.566zM8 5c.535 0 .954.462.9.995l-.35 3.507a.552.552 0 0 1-1.1 0L7.1 5.995A.905.905 0 0 1 8 5zm.002 6a1 1 0 1 1 0 2 1 1 0 0 1 0-2z" />
+        </svg>
+        <div>
+            An example alert with an icon
+        </div>
+    </div>
 </body>
 
 </html>
