Practice set 7 Collaps js

--- a/7.Practice/index.html
+++ b/7.Practice/index.html
@@ -44,5 +44,6 @@
           </div>
         </div>
       </nav>
+      <script src="../npm-packages/node_modules/bootstrap/dist/js/bootstrap.js"></script>
 </body>
 </html>
