Practice set 7 Collaps js

--- a/7.Practice/index.html
+++ b/7.Practice/index.html
@@ -10,7 +10,7 @@
 <body>
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
         <div class="container-fluid">
-          <a class="navbar-brand" href="#">Navbar</a>
+          <a class="navbar-brand" href=""><img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRL0F3jDaCihwvoznx85_Mi_bFJEI2ncHrAsqLAP8mu_eYeUKgnK4VbfZZUZ64EpFSSZ7E&usqp=CAU" style="background-size: cover;" alt=""></a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
