--- a/7.Practice/index.html
+++ b/7.Practice/index.html
@@ -10,8 +10,8 @@
 <body>
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
         <div class="container-fluid">
-          <a class="navbar-brand" href="#">
-            <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRL0F3jDaCihwvoznx85_Mi_bFJEI2ncHrAsqLAP8mu_eYeUKgnK4VbfZZUZ64EpFSSZ7E&usqp=CAU" width="30" height="30" alt="">
+          <a class="navbar-brand d-flex align-items-center" href="#">
+            <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRL0F3jDaCihwvoznx85_Mi_bFJEI2ncHrAsqLAP8mu_eYeUKgnK4VbfZZUZ64EpFSSZ7E&usqp=CAU" width="50" height="40" alt=""><span class="ms-1">PA-Solutions</span>
           </a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
