--- a/7.Practice/index.html
+++ b/7.Practice/index.html
@@ -9,7 +9,7 @@
 </head>
 
 <body>
-    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
         <div class="container-fluid">
             <a class="navbar-brand d-flex align-items-center" href="#">
                 <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRL0F3jDaCihwvoznx85_Mi_bFJEI2ncHrAsqLAP8mu_eYeUKgnK4VbfZZUZ64EpFSSZ7E&usqp=CAU"
@@ -54,7 +54,7 @@
         </div>
     </nav>
 
-    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+    <nav class="navbar navbar-expand-lg" style="background-color: lightblue;>
         <div class="container-fluid">
           <a class="navbar-brand" href="#">Navbar</a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
