--- a/7.Practice/index.html
+++ b/7.Practice/index.html
@@ -54,7 +54,7 @@
         </div>
     </nav>
 
-    <nav class="navbar navbar-expand-lg" style="background-color: lightblue;>
+    <nav class="navbar navbar-expand-lg container mt-3" style="background-color: lightblue; border-radius: 0.5rem;">
         <div class="container-fluid">
           <a class="navbar-brand" href="#">Navbar</a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
