--- a/7.Practice/index.html
+++ b/7.Practice/index.html
@@ -9,7 +9,7 @@
 </head>
 
 <body>
-    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+    <nav class="navbar sticky-top navbar-expand-lg navbar-dark bg-dark">
         <div class="container-fluid">
             <a class="navbar-brand d-flex align-items-center" href="#">
                 <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRL0F3jDaCihwvoznx85_Mi_bFJEI2ncHrAsqLAP8mu_eYeUKgnK4VbfZZUZ64EpFSSZ7E&usqp=CAU"
@@ -54,7 +54,7 @@
         </div>
     </nav>
 
-    <nav class="navbar navbar-expand-lg container mt-3" style="background-color: lightblue; border-radius: 0.5rem;">
+    <nav class="navbar sticky-top container mt-3 z-1" style="background-color: lightblue; border-radius: 0.5rem;">
         <div class="container-fluid">
           <a class="navbar-brand" href="#">Navbar</a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
@@ -85,6 +85,11 @@
           </div>
         </div>
       </nav>
+
+      <div class="m-3 z-n1" style="height: 600px; background-color: rgba(61, 61, 61, 0.259);"></div>
+      <div class="m-3 z-n1" style="height: 600px; background-color: rgba(0, 61, 61, 0.259);"></div>
+      <div class="m-3 z-n1" style="height: 600px; background-color: rgba(0, 241, 241, 0.259);"></div>
+      <div class="m-3 z-n1" style="height: 600px; background-color: rgba(255, 0, 0, 0.259)"></div>
 
     <script src="../npm-packages/node_modules/bootstrap/dist/js/bootstrap.js"></script>
 </body>
