--- a/7.Practice/index.html
+++ b/7.Practice/index.html
@@ -86,10 +86,10 @@
         </div>
       </nav>
 
-      <div class="m-3 z-n1" style="height: 600px; background-color: rgba(61, 61, 61, 0.259);"></div>
+      <!-- <div class="m-3 z-n1" style="height: 600px; background-color: rgba(61, 61, 61, 0.259);"></div>
       <div class="m-3 z-n1" style="height: 600px; background-color: rgba(0, 61, 61, 0.259);"></div>
       <div class="m-3 z-n1" style="height: 600px; background-color: rgba(0, 241, 241, 0.259);"></div>
-      <div class="m-3 z-n1" style="height: 600px; background-color: rgba(255, 0, 0, 0.259)"></div>
+      <div class="m-3 z-n1" style="height: 600px; background-color: rgba(255, 0, 0, 0.259)"></div> -->
 
     <script src="../npm-packages/node_modules/bootstrap/dist/js/bootstrap.js"></script>
 </body>
