--- a/8.Practice/index.html
+++ b/8.Practice/index.html
@@ -9,20 +9,33 @@
 </head>
 
 <body>
-    <ul class="nav nav-tabs">
+    <ul class="nav sticky-top nav-tabs">
         <li class="nav-item">
-            <a class="nav-link active" aria-current="page" href="#">Active</a>
+            <a class="nav-link active" aria-current="page" href="#box1">Active</a>
+        </li>
+        <li class="nav-item ">
+            <a class="nav-link " href="#box2" aria-current="page" >Link</a>
         </li>
         <li class="nav-item">
-            <a class="nav-link" href="#">Link</a>
+            <a class="nav-link" href="#box3">Link</a>
         </li>
         <li class="nav-item">
-            <a class="nav-link" href="#">Link</a>
+            <a class="nav-link" href="#box4">Link</a>
+        </li>
+        <li class="nav-item">
+            <a class="nav-link" href="#box5">Link</a>
         </li>
         <li class="nav-item">
             <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Disabled</a>
         </li>
     </ul>
+
+    <div class="mt-2" id="box1" style="background-color: aqua; height: 600px;"></div>
+    <div class="mt-2" id="box2" style="background-color: red; height: 600px;"></div>
+    <div class="mt-2" id="box3" style="background-color: pink; height: 600px;"></div>
+    <div class="mt-2" id="box4" style="background-color: blue; height: 600px;"></div>
+    <div class="mt-2" id="box5" style="background-color: grey; height: 600px;"></div>
+
     <script src="../npm-packages/node_modules/bootstrap/dist/js/bootstrap.js"></script>
 </body>
 
