--- a/9.Practice/index.html
+++ b/9.Practice/index.html
@@ -41,7 +41,7 @@
         </div>
         <div class="col-auto">
             <input type="password" id="inputPassword6" class="form-control" 
-            
+            placeholder="Hello"
             aria-describedby="passwordHelpInline" disabled readonly>
         </div>
         <div class="col-auto">
