--- a/9.Practice/index.html
+++ b/9.Practice/index.html
@@ -78,7 +78,8 @@
 
     <div class="container">
         <label for="exampleColorInput" class="form-label">Color picker</label>
-<input type="color" class="form-control form-control-color" id="exampleColorInput" value="#563d7c" title="Choose your color">
+        <input type="color" class="form-control form-control-color" id="exampleColorInput" value="#563d7c"
+            title="Choose your color">
     </div>
 
     <script src="../npm-packages/node_modules/bootstrap/dist/js/bootstrap.js"></script>
