--- a/9.Practice/index.html
+++ b/9.Practice/index.html
@@ -101,7 +101,7 @@
         <option value="3">Three</option>
     </select>
 
-    <input type="checkbox" class="btn-check" id="btn-check" autocomplete="off">
+    <input type="checkbox" class="container btn-check m-5" id="btn-check" autocomplete="off">
     <label class="btn btn-primary" for="btn-check">Single toggle</label>
 
     <script src="../npm-packages/node_modules/bootstrap/dist/js/bootstrap.js"></script>
