--- a/9.Practice/index.html
+++ b/9.Practice/index.html
@@ -101,11 +101,21 @@
         <option value="3">Three</option>
     </select>
 
-    <div class="container m-4"> 
+    <div class="container m-4">
         <input type="checkbox" class="btn-check" id="btn-check" autocomplete="off">
         <label class="btn btn-primary" for="btn-check">Single toggle</label>
 
-        
+        <input type="checkbox" class="btn-check" id="btn-check-outlined" autocomplete="off">
+        <label class="btn btn-outline-primary" for="btn-check-outlined">Single toggle</label><br>
+
+        <input type="checkbox" class="btn-check" id="btn-check-2-outlined" checked autocomplete="off">
+        <label class="btn btn-outline-secondary" for="btn-check-2-outlined">Checked</label><br>
+
+        <input type="radio" class="btn-check" name="options-outlined" id="success-outlined" autocomplete="off" checked>
+        <label class="btn btn-outline-success" for="success-outlined">Checked success radio</label>
+
+        <input type="radio" class="btn-check" name="options-outlined" id="danger-outlined" autocomplete="off">
+        <label class="btn btn-outline-danger" for="danger-outlined">Danger radio</label>
     </div>
     <script src="../npm-packages/node_modules/bootstrap/dist/js/bootstrap.js"></script>
 </body>
