--- a/9.Practice/index.html
+++ b/9.Practice/index.html
@@ -118,7 +118,10 @@
         <label class="btn btn-outline-danger" for="danger-outlined">Danger radio</label>
     </div>
 
-    
+    <div class="container">
+        <label for="customRange1" class="form-label">Example range</label>
+<input type="range" class="form-range" id="customRange1">
+    </div>
     <script src="../npm-packages/node_modules/bootstrap/dist/js/bootstrap.js"></script>
 </body>
 
