--- a/9.Practice/index.html
+++ b/9.Practice/index.html
@@ -118,9 +118,9 @@
         <label class="btn btn-outline-danger" for="danger-outlined">Danger radio</label>
     </div>
 
-    <div class="container">
+    <div class="container bg-secondary">
         <label for="customRange1" class="form-label">Example range</label>
-        <input type="range" class="form-range" id="customRange1">
+        <input type="range" class="form-range bg-" id="customRange1">
     </div>
     <script src="../npm-packages/node_modules/bootstrap/dist/js/bootstrap.js"></script>
 </body>
