--- a/9.Practice/index.html
+++ b/9.Practice/index.html
@@ -299,7 +299,7 @@
             </div>
 
             <div class="mb-3">
-                <input type="file" class="form-control" aria-label="file example" required>
+                <input type="file" class="form-control" aria-label="file example" required multiple>
                 <div class="invalid-feedback">Example invalid form file feedback</div>
             </div>
 
