--- a/9.Practice/index.html
+++ b/9.Practice/index.html
@@ -366,8 +366,10 @@
         </form>
     </div>
 
-    
+
     <script src="../npm-packages/node_modules/bootstrap/dist/js/bootstrap.js"></script>
+
+    <script src="../npm-packages/node_modules/@popperjs/core/dist/"></script>
 </body>
 
 </html>
