--- a/9.Practice/index.html
+++ b/9.Practice/index.html
@@ -369,7 +369,7 @@
 
     <script src="../npm-packages/node_modules/bootstrap/dist/js/bootstrap.js"></script>
 
-    <script src="../npm-packages/node_modules/@popperjs/core/dist/"></script>
+    <script src="../npm-packages/node_modules/@popperjs/core/dist/cjs/popper.js"></script>
 </body>
 
 </html>
