--- a/9.Practice/index.html
+++ b/9.Practice/index.html
@@ -367,7 +367,7 @@
     </div>
 
 
-    <div class="container .bg-dark.bg-gradient">
+    <div class="container mt-5 .bg-dark.bg-gradient">
         <div class="row">
             
         </div>
