--- a/9.Practice/index.html
+++ b/9.Practice/index.html
@@ -370,7 +370,7 @@
     <div class="container mt-5 .bg-dark.bg-gradient">
         <div class="row">
             <div class="col col-4">
-                <button type="button" class="btn btn-primary position-relative">
+                <button type="button" class="btn btn-primary position-relative rounded-pill">
                     Inbox
                     <span class="position-absolute top-0 start-100 translate-middle badge rounded-pill bg-danger">
                         9+
