--- a/9.Practice/index.html
+++ b/9.Practice/index.html
@@ -382,6 +382,13 @@
     </div>
 
     <div class="container">
+
+        <!-- Button trigger modal -->
+<button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#exampleModal">
+    Launch demo modal
+  </button>
+  
+
         <div class="modal" tabindex="-1">
             <div class="modal-dialog">
                 <div class="modal-content">
