--- a/9.Practice/index.html
+++ b/9.Practice/index.html
@@ -7,7 +7,7 @@
     <title>Document</title>
     <link rel="stylesheet" href="../npm-packages/node_modules/bootstrap/dist/css/bootstrap.css">
 
-    <script src="script.js"></script>
+    <link rel="script" href="script.js">
 </head>
 
 <body>
