--- a/10.Practice/index.html
+++ b/10.Practice/index.html
@@ -54,8 +54,15 @@
                         <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                     </div>
                     <div class="modal-body">
-                        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Sunt, debitis ullam! Sunt hic voluptates ex debitis. Similique, magnam cumque suscipit, quis incidunt voluptatibus aspernatur est esse adipisci excepturi doloremque aut?Lorem, ipsum dolor sit amet consectetur adipisicing elit. Repellendus, natus nihil? Autem tempora provident excepturi odit, voluptatem ad molestias vel optio delectus sapiente praesentium qui recusandae asperiores impedit harum quasi!
-                        Alias voluptas ipsam vel aliquam tenetur minus, aliquid quis earum dolore accusamus quae, placeat repellat qui sequi enim non iure accusantium autem inventore voluptates. Suscipit fugit tempora praesentium aliquam sit.</p>
+                        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Sunt, debitis ullam! Sunt hic
+                            voluptates ex debitis. Similique, magnam cumque suscipit, quis incidunt voluptatibus
+                            aspernatur est esse adipisci excepturi doloremque aut?Lorem, ipsum dolor sit amet
+                            consectetur adipisicing elit. Repellendus, natus nihil? Autem tempora provident excepturi
+                            odit, voluptatem ad molestias vel optio delectus sapiente praesentium qui recusandae
+                            asperiores impedit harum quasi!
+                            Alias voluptas ipsam vel aliquam tenetur minus, aliquid quis earum dolore accusamus quae,
+                            placeat repellat qui sequi enim non iure accusantium autem inventore voluptates. Suscipit
+                            fugit tempora praesentium aliquam sit.</p>
                     </div>
                     <div class="modal-footer">
                         <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
@@ -69,7 +76,7 @@
         integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz"
         crossorigin="anonymous"></script>
 
-        <script src="https://unpkg.com/@popperjs/core@2"></script>
+    <script src="https://unpkg.com/@popperjs/core@2"></script>
 </body>
 
 </html>
