--- a/10.Practice/index.html
+++ b/10.Practice/index.html
@@ -81,7 +81,10 @@
     </div>
 
     <div>
-        
+        <div class="progress" role="progressbar" aria-label="Example with label" aria-valuenow="100" aria-valuemin="20"
+            aria-valuemax="100">
+            <div class="progress-bar" style="width: 25%">20%</div>
+        </div>
     </div>
 
     <!-- JS scripts  -->
@@ -90,7 +93,7 @@
         integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz"
         crossorigin="anonymous"></script>
 
-        <script src="../npm-packages/node_modules/@popperjs/core/dist/cjs/popper.js"></script>
+    <script src="../npm-packages/node_modules/@popperjs/core/dist/cjs/popper.js"></script>
 </body>
 
 </html>
